# ShaderLab

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
senra_api/: Cargo.toml
senra_api/src/: auth.rs  client.rs  client_wasm.rs  endpoint.rs  lib.rs  notebook.rs  notebook_content.rs  resource.rs  shader.rs  user.rs
senra_api/src/payloads/: auth.rs  mod.rs  notebook.rs  shader.rs  user.rs
senra_app/: Cargo.toml  index.html
senra_app/src/: config.rs  global.rs  main.rs  state.rs
senra_app/src/editor/: mod.rs
senra_app/src/network/: mod.rs  native.rs  web.rs
senra_app/src/pages/: auth.rs  home.rs  login.rs  mod.rs  notebook.rs  user.rs
senra_app/src/storage/: mod.rs  native.rs  web.rs
senra_app/src/transport/: mod.rs
senra_app/src/viewer/: mod.rs  pipeline.rs  primitive.rs  uniforms.rs
senra_app/src/widgets/: cell.rs  mod.rs
senra_app/src/widgets/cell/: mod.rs
senra_app/src/widgets/editor/: bindings.rs  content.rs  editor.rs  highlighter.rs  mod.rs  state.rs  style.rs
senra_app/src/widgets/editor/assets/: Markdown.sublime-syntax
senra_app/src/widgets/menu/: flex.rs  menu_bar.rs  menu_bar_overlay.rs  menu_tree.rs  mod.rs  style.rs
senra_app/src/widgets/viewer/: mod.rs  pipeline.rs  primitive.rs  uniforms.rs
senra_server/: Cargo.toml
senra_server/migrations/: 0_init.sql
senra_server/src/: config.rs  db.rs  lib.rs  main.rs  state.rs
senra_server/src/errors/: auth.rs  mod.rs  notebook.rs  shader.rs  user.rs
senra_server/src/middleware/: auth.rs
senra_server/src/models/: mod.rs  notebook.rs  resource.rs  shader.rs  shadergraph.rs  user.rs
senra_server/src/routes/: auth.rs  mod.rs  notebook.rs  user.rs  ws.rs
senra_server/src/services/: auth.rs  mod.rs  notebook.rs  resource.rs  shader.rs  user.rs
senra_server/src/state/: mod.rs
senra_server/tests/: auth_tests.rs  notebook_basic_tests.rs  notebook_comment_tests.rs  notebook_like_tests.rs  notebook_recommendation_tests.rs  notebook_tests.rs  notebook_version_tests.rs  user_tests.rs
senra_server/tests/server/: mock_notebook.rs  mock_user.rs  mod.rs
senra_web/: index.html  package.json  vite.config.js
senra_web/scripts/: build-wasm.js
senra_web/src/: api.js  main.js  state.js  style.css
senra_web/src/components/: auth-modal.js  auth-modal.module.css  avatar.js  avatar.module.css  index.js  navbar.css  navbar.js  navbar.module.css  notebook-card.js  notebook-card.module.css  notebook-grid.js  notebook-grid.module.css  router.js  router.module.css
senra_web/src/components/comments/: comment-form.js  comment-form.module.css  comment-list.js  comment-list.module.css  index.js
senra_web/src/components/navbar/: auth-modal.js  auth-modal.module.css  avatar.js  avatar.module.css  index.js  navbar.js  navbar.module.css  router.js
senra_web/src/components/notebook/: index.js  notebook-cells.js  notebook-controls.js  notebook-renderer.js  notebook-viewer.js  notebook-viewer.module.css  shader-renderer-factory.js
senra_web/src/components/notebook/code/: index.js  shader-editor.js  shader-editor.module.css  shader-tabs.js  shader-tabs.module.css
senra_web/src/components/notebook/code/wgsl/: index.js  syntax.grammar
senra_web/src/components/notebook/moya/: bind-group-manager.js  geometry-manager.js  index.js  performance-monitor.js  render-pass-executor.js  render-pipeline-manager.js  renderer-factory.js  renderer.js  texture-manager.js  uniform-manager.js
senra_web/src/components/notebook/moya-legacy/: index.js
senra_web/src/pages/: debug-notebook.js  debug-state.js  debug.css  debug.js  debug.module.css  home.js  home.module.css  index.js  notebook.js  notebook.module.css
senra_web/src/renderer/: index.js  manager.js  resource-manager.js  shader-renderer.js
senra_web/src/services/: auth.js  index.js  notebook.js  user.js
senra_web/src/utils/: index.js  time.js
shaderlab-client/: Cargo.toml
shaderlab-server/: Cargo.toml
shaderlab-server/migrations/: 0_init.sql
shaderlab-server/src/: config.rs  db.rs  lib.rs  main.rs
shaderlab-server/src/errors/: shader.rs
shaderlab-server/src/middleware/: auth.rs
shaderlab-server/src/models/: mod.rs  notebook.rs  shader.rs
shaderlab-server/src/routes/: auth.rs  mod.rs
shaderlab-server/tests/: auth_tests.rs
