[workspace]
members = [
    "senra_api",
    "senra_app",
    "senra_server"
]
resolver = "2"

[workspace.dependencies]
http = "1"
iced = "0.13"
senra_api = { path = "senra_api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = "5"
