[package]
name = "senra_api"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
http.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
utoipa = { workspace = true, optional = true }
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[features]
default = []
docs = ["dep:utoipa"]
