[package]
name = "senra_app"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytemuck = "1"
glam = { version = "0.25", features = ["bytemuck"] }
http.workspace = true
senra_api.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect = "5"
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { workspace = true, features = ["tokio", "debug", "markdown", "highlighter", "advanced"] }
reqwest = { version = "0.12", features = ["json"] }
tokio.workspace = true
tokio-tungstenite = "0.26"
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { workspace = true, features = ["debug", "markdown", "highlighter", "advanced"] }
web-sys = { version = "0.3", features = ["MessageEvent", "WebSocket", "Window", "Storage"] }
wasm-bindgen = "0.2"
