[package]
name = "senra_app"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytemuck = "1"
glam = { version = "0.25", features = ["bytemuck", "serde"] }
http.workspace = true
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
senra_api.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str = "0.2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { workspace = true, features = ["advanced", "debug", "image", "markdown", "tokio"] }
tokio = { workspace = true, features = ["fs", "net"] }
tokio-tungstenite = "0.26"
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { workspace = true, features = ["advanced", "debug", "image", "markdown"] }
web-sys = { version = "0.3", features = ["BinaryType", "ErrorEvent", "MessageEvent", "Storage", "WebSocket", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
