[package]
name = "senra_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
bcrypt = "0.16"
mime = "0.3"
senra_api.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls", "time"] }
time = { version = "0.3", features = ["serde"] }
tokio.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
jsonwebtoken = "9"
thiserror.workspace = true

[dev-dependencies]
http-body-util = "0.1"
