[package]
name = "senra_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
bcrypt = "0.17"
image = "0.24"
mime = "0.3"
senra_api = { workspace = true, features = ["docs"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls", "time"] }
time = { version = "0.3", features = ["serde"] }
tokio.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
jsonwebtoken = "9"
thiserror.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }

[dev-dependencies]
http-body-util = "0.1"
